--- a/src/main/webapp/events/casualty/search.xhtml
+++ b/src/main/webapp/events/casualty/search.xhtml
@@ -16,7 +16,7 @@
                     <h:outputText value="Lista de Sinistros Registrados" style="font-weight: bold; font-size: 24px;" />
                 </f:facet>
                 
-                <p:dataTable id="casualties" var="casualty" value="#{entryEventBean.casualties}" 
+                <p:dataTable id="casualties" var="casualty" value="#{casualtyService.casualties}" 
                              rowKey="#{casualty.name}" emptyMessage="Nenhum sinistro registrado ainda."
                              scrollable="true" scrollHeight="300">                
                     <f:facet name="header">
