--- a/src/main/webapp/production/model/search.xhtml
+++ b/src/main/webapp/production/model/search.xhtml
@@ -16,7 +16,7 @@
                     <h:outputText value="Lista de Modelos Registrados" style="font-weight: bold; font-size: 24px;" />
                 </f:facet>
                 
-                <p:dataTable id="models" var="model" value="#{productionOrderBean.models}" 
+                <p:dataTable id="models" var="model" value="#{modelService.models}" 
                              rowKey="#{model.reference}" emptyMessage="Nenhum modelo registrado ainda."
                              scrollable="true" scrollHeight="300" rowExpandMode="single">                
                     <f:facet name="header">
