--- a/src/main/webapp/production/phase/search.xhtml
+++ b/src/main/webapp/production/phase/search.xhtml
@@ -16,7 +16,7 @@
                     <h:outputText value="Lista de Fases Registradas" style="font-weight: bold; font-size: 24px;" />
                 </f:facet>     
                 
-                <p:dataTable id="phases" var="phase" value="#{modelBean.phases}" 
+                <p:dataTable id="phases" var="phase" value="#{phaseService.phases}" 
                              rowKey="#{phase.name}" emptyMessage="Nenhuma fase registrada ainda."
                              scrollable="true" scrollHeight="300" rowExpandMode="single">                
                     <f:facet name="header">
