--- a/src/main/webapp/production/productionOrder/register.xhtml
+++ b/src/main/webapp/production/productionOrder/register.xhtml
@@ -15,11 +15,11 @@
                     <h:outputText value="Cadastro de Ordem de Produção" style="font-weight: bold; font-size: 24px;" />
                 </f:facet>
                 
-                <h:outputLabel for="reference" value="Ordem de Produção: " style="font-weight: bold;"/> 
+                <p:outputLabel for="reference" value="Ordem de Produção: " style="font-weight: bold;"/> 
                 <p:inputText id="reference" label="Ordem de Produção" value="#{productionOrderBean.productionOrder.reference}"
                              required="true" requiredMessage="Digite a ordem de produção!!!" style="width: 250px;" />
 
-                <h:outputLabel for="model" value="Referência: " style="font-weight: bold;" />              
+                <p:outputLabel for="model" value="Referência: " style="font-weight: bold;" />              
                 <p:selectOneMenu id="model" value="#{productionOrderBean.productionOrder.model}" 
                                  converter="modelConverter" panelStyle="width: 250px;"
                                  effect="fade" var="md" style="width: 250px;" filter="true" 
