--- a/src/main/webapp/personnel/supervisor/register.xhtml
+++ b/src/main/webapp/personnel/supervisor/register.xhtml
@@ -48,8 +48,7 @@
                 <h:outputLabel value="Subordinados: " style="font-weight: bold;" />      
                 
                 <p:selectManyCheckbox id="subordinates" value="#{supervisorRegisterBean.selectedSubordinates}" 
-                                      layout="grid" columns="4" converter="subordinateConverter"
-                                      converterMessage="Subordinado inválido!!!">
+                                      layout="grid" columns="4" converter="subordinateConverter">
                     <f:selectItems value="#{subordinateService.subordinates}" var="subordinate" 
                                    itemLabel="#{subordinate.name}" itemValue="#{subordinate}" />
                 </p:selectManyCheckbox>
