--- a/src/main/webapp/production/phase/import.xhtml
+++ b/src/main/webapp/production/phase/import.xhtml
@@ -40,7 +40,7 @@
                     
                     <p:column headerText="Setor" sortBy="#{phase.sector.name}" 
                               style="width: 300px; text-align: center;">
-                         <h:outputText value="#{sector.sector.name}" />
+                         <h:outputText value="#{phase.sector.name}" />
                     </p:column>
                     
                     <p:column headerText="Supervisor" sortBy="#{phase.sector.supervisor.name}" 
