--- a/src/main/webapp/production/productionOrder/search.xhtml
+++ b/src/main/webapp/production/productionOrder/search.xhtml
@@ -32,6 +32,14 @@
                               style="width: 300px; text-align: center;">
                          <h:outputText value="#{productionOrder.model.reference}" />
                     </p:column>
+
+                    <f:facet name="footer">
+                        <p:commandButton process="@form:grid" icon="ui-icon-refresh" 
+                                         title="Atualizar" 
+                                         update="@form:grid, @form:messages" 
+                                         actionListener="#{productionOrderService.update()}"
+                                         style="width: 20px; height: 20px;" />
+                    </f:facet>
                 </p:dataTable>
                     
                 <f:facet name="footer">
