--- a/src/main/webapp/production/model/search.xhtml
+++ b/src/main/webapp/production/model/search.xhtml
@@ -57,6 +57,14 @@
                             </f:facet>  
                         </p:dataTable>
                     </p:rowExpansion>
+
+                    <f:facet name="footer">
+                        <p:commandButton process="@form:grid" icon="ui-icon-refresh" 
+                                         title="Atualizar" 
+                                         update="@form:grid, @form:messages" 
+                                         actionListener="#{modelService.update()}"
+                                         style="width: 20px; height: 20px;" />
+                    </f:facet>
                 </p:dataTable>
                     
                 <f:facet name="footer">
